--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <body>
     <%= link_to 'home',root_path%>
     <%= link_to 'about',about_path%>
+    <%= link_to 'contact',contact_path%>
     <%= yield %>
   </body>
 </html>
